@@ -71,16 +71,10 @@ $docker run --name tomcat -it --rm -d -p 8080:8080 tomcat-sample:1.0
 ```
 $docker ps -l
 CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS                    NAMES
-b9f0f0d4eb06        tomcat-sample:1.0   "catalina.sh run"   8 minutes ago       Up 8 minutes        0.0.0.0:8080->8080/tcp   tomcat
+bfd111dae312        tomcat-sample:1.0   "catalina.sh run"   5 minutes ago       Up 5 minutes        0.0.0.0:8080->8080/tcp   tomcat
 
-$docker exec b9f0f0d4eb06 ls -lrt webapps/
-total 28
-drwxr-xr-x  5 root root 4096 Mar 31  2015 manager
-drwxr-xr-x  5 root root 4096 Mar 31  2015 host-manager
-drwxr-xr-x  6 root root 4096 Mar 31  2015 examples
-drwxr-xr-x 14 root root 4096 Mar 31  2015 docs
-drwxr-xr-x  3 root root 4096 Mar 31  2015 ROOT
--rw-r--r--  1 root root 3114 Oct 31 13:56 sample.war
-drwxr-xr-x  4 root root 4096 Oct 31 13:57 sample
+
+$docker exec bfd111dae312 ps -eaf | grep -i tomcat
+root         1     0  1 14:43 pts/0    00:00:05 /usr/bin/java -Djava.util.logging.config.file=/usr/local/tomcat/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djava.endorsed.dirs=/usr/local/tomcat/endorsed -classpath /usr/local/tomcat/bin/bootstrap.jar:/usr/local/tomcat/bin/tomcat-juli.jar -Dcatalina.base=/usr/local/tomcat -Dcatalina.home=/usr/local/tomcat -Djava.io.tmpdir=/usr/local/tomcat/temp org.apache.catalina.startup.Bootstrap start
 
 ```
